# proyecto_nulidad

./: .gitignore  CLAUDE.md  EQUIPO.md  MAPA.md  download_loop.py  machine_config.example.json  machine_config.json  pyproject.toml
.claude/: guardrail.py  propagar_autonomous.sh  propagar_claudemd.sh  settings.json  settings.local.json
.claude/agents/: ocr-reader.md  scraper-worker.md
.claude/commands/: iniciar.md  sync.md  trabajar.md
.claude/rules/: cavernicola.md  scraper.md
.github/workflows/: monitor.yml
configs/: README.md  hector.json  jack.json  jim.json  lynn.json
scripts/: configurar_maquina.sh  install_hooks.sh  mission_briefing.py  setup_machine.sh
src/: config.py  extractor.py  gen_reporte.py
src/audit/: integrity.py  temporal_monitor.py  umbrales_loe.py  verificar_sesgo_actas.py
src/db/: migracion_drop_json.py  normalizar_votos.py  progress_db.py  repair.py  schema.py
src/extraction/: extractor.py  gemini_extractor.py  instalacion_extractor.py  instalacion_extractor_gemini.py  instalacion_extractor_openai.py  ocr_hora.py  test_calibrar.py
src/reporting/: anexos_pericial.py  generar_csv_distrito.py  informe_forense.py  informe_pericial_jne.py  progress_cli.py  qa_integridad.py  replicar_estadistico.py  reporte_estadistico.py  votos_perdidos_rla.py
src/scraping/: api_client.py  browser_scraper.py  scraper.py
src/sync/: exporter.py  exporter_v2.py  merger.py  merger_v2.py  verifier.py
sync/export/: MAQUINA_3_CIENEGUILLA.json  MAQUINA_3_PUCUSANA.json  MAQUINA_6_PUNTA_HERMOSA.json
sync/export/ANCON/: manifest.json
sync/export/ATE/: manifest.json
sync/export/BARRANCO/: manifest.json
sync/export/BRENA/: manifest.json
sync/export/CARABAYLLO/: manifest.json
sync/export/CHACLACAYO/: manifest.json
sync/export/CHORRILLOS/: manifest.json
sync/export/CIENEGUILLA/: manifest.json
sync/export/COMAS/: manifest.json
sync/export/EL_AGUSTINO/: manifest.json
sync/export/INDEPENDENCIA/: manifest.json
sync/export/JESUS_MARIA/: manifest.json
sync/export/LA_MOLINA/: manifest.json
sync/export/LA_VICTORIA/: manifest.json
sync/export/LIMA/: manifest.json
sync/export/LINCE/: manifest.json
tests/: test_entrega_estadistico.py  test_extractor.py  test_sync_v2.py
(+27 files in other folders)
