[project]
name = "proyecto-nulidad"
version = "0.1.0"
description = "Scraper ONPE - Elecciones 2026 Lima Provincia"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "pdf2image>=1.17",
    "Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
