[project]
name = "proyecto-nulidad"
version = "0.1.0"
description = "Scraper ONPE - Elecciones 2026 Lima Provincia"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.27",
    "openai>=2.32.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "pdf2image>=1.17",
    "Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
